# APP_Front

./: .env  .gitignore  flet_linux_basic.sh  flet_linux_test.sh  flet_windows_basic.bat  flet_windows_junhwan.bat  flet_windows_test.bat  main.py  patch_requirements.txt  print(data)_convert.py  pyproject.toml  requirements.txt  save.txt  test.py  test_browser.lnk
.original/component/: common_components.py
.original/components/: navigation.py  pet_info_food_view.py
.re_original/: main.py
.re_original/component/: common_components.py  common_layout.py  text.py
.test/: main.py  noti_test_main.py
.test/geonhyeong/: README.md  address.py  auth_service.py  db.py  oauth_api.py  oauth_service.py  signinup_view.py
api/: breed_data.py  default_data.py  full_query.py  product_data.py  product_guide.py  product_weight_data.py  test_data.py  user_data.py
component/: __init__.py  bottom_layout.py  bottom_sheet.py  dropdown.py  etc_layout.py  field.py  image_circle.py  input.py  item_list_column.py  layout.py  radio_group.py  text.py  top_layout.py
components/: __init__.py
components/common/: bottom_sheet.py  button.py  content_box.py  text.py  (+16 more)
domains/: __init__.py  address.py  developer_dummy_page.py  home_views_connect.py  onboarding_views_connect.py  views_connect.py
geonhyeong/: address.py  signinup_view.py
junhwan/: main.py
original/: main.py
refactoring/: main.py
views/: __init__.py  full_query.py  pet_basic_info_view.py  pet_info_activity_view.py  pet_info_food_view.py  pet_info_obesity_view.py  signup_success_view.py  signup_view.py  views_connect.py
(+145 files in other folders)
